Mon Oct 06 12:27:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst,xappy/searchconnection.py: Add
	  query_difference() to product a query which ranks documents
	  according to how close to a particular value one of the fields
	  is.
	* xappy/unittests/distance.py: Add tests for query_difference.
	* AUTHORS: Mention that Paul did this.

Sun Sep 28 15:52:10 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to use new packages.

Fri Sep 26 04:25:48 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Updated xapian packages.

Thu Sep 25 18:04:15 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Expand a FIXME.

Thu Sep 25 09:07:08 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Fix add_subfacet() to not repeatedly
	  add a parent which is already there.  Should have no functional
	  effect, but should keep the size of the configuration down.

Fri Sep 19 10:55:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add checks to ensure that weighting
	  parameters are in the allowed ranges.

Thu Sep 18 00:55:28 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Allow getting a document based on
	  the xapian docid, instead of the external unique ID used by
	  xappy.

Tue Sep 09 17:15:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/field_associations.py: Extend the test a bit
	  further (it still passes!).

Tue Sep 09 17:01:19 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Add optional "weight" member to Field:
	  defaults to 1.0, not currently used anywhere other than in the
	  relevant_data() calculation for associated fields.
	* xappy/fieldactions.py: Store the weight values specified.  Also,
	  modify STORE_CONTENT to simply increase the stored weight if a